--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: 高级Web课程@FDU
+email: adwebfdu@126.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  课程相关内容会被添加到这个repo里面.<br/>sharing is encouraged XD
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://adwebfdu.github.io" # the base hostname & protocol for your site
+# twitter_username: jekyllrb
+github_username:  adwebfdu
 
 # Build settings
 markdown: kramdown
