--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://adwebfdu.github.io" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
-github_username:  adwebfdu
+github_username:  adwebfdu-org
 
 # Build settings
 markdown: kramdown
